--- a/templates/almovconsdia_egresos_print.htm
+++ b/templates/almovconsdia_egresos_print.htm
@@ -128,7 +128,7 @@
 	 
 		{BEGIN almovconsdiae_id_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field5" {$item_simple_grid_field5} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="almovconsdiae_id" data-fieldname="almovconsdiae_id" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field14" {$item_simple_grid_field14} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="almovconsdiae_id" data-fieldname="almovconsdiae_id" 
 
 	
 	
@@ -158,7 +158,7 @@
 	 
 		{BEGIN almovconsdia_id_fk_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="almovconsdia_id_fk" data-fieldname="almovconsdia_id_fk" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field15" {$item_simple_grid_field15} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="almovconsdia_id_fk" data-fieldname="almovconsdia_id_fk" 
 
 	
 	
@@ -188,7 +188,7 @@
 	 
 		{BEGIN almovconsdiae_cantidad_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field14" {$item_simple_grid_field14} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="almovconsdiae_cantidad" data-fieldname="almovconsdiae_cantidad" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field16" {$item_simple_grid_field16} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="almovconsdiae_cantidad" data-fieldname="almovconsdiae_cantidad" 
 
 	
 	
@@ -218,7 +218,7 @@
 	 
 		{BEGIN sys_user_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field15" {$item_simple_grid_field15} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="sys_user" data-fieldname="sys_user" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field17" {$item_simple_grid_field17} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="sys_user" data-fieldname="sys_user" 
 
 	
 	
@@ -248,7 +248,7 @@
 	 
 		{BEGIN sys_document_func_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field16" {$item_simple_grid_field16} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="sys_document_func" data-fieldname="sys_document_func" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field18" {$item_simple_grid_field18} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="sys_document_func" data-fieldname="sys_document_func" 
 
 	
 	
@@ -278,7 +278,7 @@
 	 
 		{BEGIN sys_doclasedoc_id_fk_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field17" {$item_simple_grid_field17} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="sys_doclasedoc_id_fk" data-fieldname="sys_doclasedoc_id_fk" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field19" {$item_simple_grid_field19} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="sys_doclasedoc_id_fk" data-fieldname="sys_doclasedoc_id_fk" 
 
 	
 	
@@ -308,7 +308,7 @@
 	 
 		{BEGIN mcdalmacen_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field18" {$item_simple_grid_field18} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcdalmacen" data-fieldname="mcdalmacen" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field20" {$item_simple_grid_field20} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcdalmacen" data-fieldname="mcdalmacen" 
 
 	
 	
@@ -338,7 +338,7 @@
 	 
 		{BEGIN mcdcuenta_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field19" {$item_simple_grid_field19} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcdcuenta" data-fieldname="mcdcuenta" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field21" {$item_simple_grid_field21} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcdcuenta" data-fieldname="mcdcuenta" 
 
 	
 	
@@ -368,7 +368,7 @@
 	 
 		{BEGIN mcdcodelem_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field20" {$item_simple_grid_field20} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcdcodelem" data-fieldname="mcdcodelem" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field22" {$item_simple_grid_field22} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcdcodelem" data-fieldname="mcdcodelem" 
 
 	
 	
@@ -398,7 +398,7 @@
 	 
 		{BEGIN mcdnomelem_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field21" {$item_simple_grid_field21} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcdnomelem" data-fieldname="mcdnomelem" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field23" {$item_simple_grid_field23} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcdnomelem" data-fieldname="mcdnomelem" 
 
 	
 	
@@ -428,7 +428,7 @@
 	 
 		{BEGIN consumo_id_fk_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field22" {$item_simple_grid_field22} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="consumo_id_fk" data-fieldname="consumo_id_fk" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field24" {$item_simple_grid_field24} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="consumo_id_fk" data-fieldname="consumo_id_fk" 
 
 	
 	
@@ -458,7 +458,7 @@
 	 
 		{BEGIN ctrl_saldo_fieldheadercolumn}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field23" {$item_simple_grid_field23} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="ctrl_saldo" data-fieldname="ctrl_saldo" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field25" {$item_simple_grid_field25} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="ctrl_saldo" data-fieldname="ctrl_saldo" 
 
 	
 	
@@ -472,6 +472,66 @@
 	
 	</th>
 	{END cellblock_grid_headcell_field11}
+									{BEGIN cellblock_grid_headcell_field12}
+	<th
+	
+	{$cell_grid_headcell_field12}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$mcd_valunitant_class}	"
+
+			data-field="mcd_valunitant"
+	
+	data-cellId="grid_headcell_field12" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN mcd_valunitant_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field26" {$item_simple_grid_field26} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcd_valunitant" data-fieldname="mcd_valunitant" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label almovconsdia_egresos mcd_valunitant }</span>
+			</span>
+	</span>
+{END mcd_valunitant_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field12}
+									{BEGIN cellblock_grid_headcell_field13}
+	<th
+	
+	{$cell_grid_headcell_field13}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$mcd_valmovto_class}	"
+
+			data-field="mcd_valmovto"
+	
+	data-cellId="grid_headcell_field13" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN mcd_valmovto_fieldheadercolumn}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field27" {$item_simple_grid_field27} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcd_valmovto" data-fieldname="mcd_valmovto" 
+
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label almovconsdia_egresos mcd_valmovto }</span>
+			</span>
+	</span>
+{END mcd_valmovto_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field13}
 							</tr>
 															
 					{END grid_header}
@@ -735,6 +795,48 @@
 {END ctrl_saldo_fieldcolumn}	
 	</td>
 	{END cellblock_grid_cell_field11}
+									{BEGIN cellblock_grid_cell_field12}
+	<td
+	
+	{$cell_grid_cell_field12}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$mcd_valunitant_class}	"
+
+			data-field="mcd_valunitant"
+	
+	data-cellId="grid_cell_field12" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN mcd_valunitant_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field5" {$item_simple_grid_field5} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcd_valunitant" data-fieldname="mcd_valunitant" data-default-width >
+{$mcd_valunitant_value}
+</span>
+{END mcd_valunitant_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field12}
+									{BEGIN cellblock_grid_cell_field13}
+	<td
+	
+	{$cell_grid_cell_field13}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$mcd_valmovto_class}	"
+
+			data-field="mcd_valmovto"
+	
+	data-cellId="grid_cell_field13" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN mcd_valmovto_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="mcd_valmovto" data-fieldname="mcd_valmovto" data-default-width >
+{$mcd_valmovto_value}
+</span>
+{END mcd_valmovto_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field13}
 							</tr>
 										
 											</tbody>
@@ -926,6 +1028,36 @@
 	
 	</td>
 	{END cellblock_grid_footcell_field11}
+									{BEGIN cellblock_grid_footcell_field12}
+	<td
+	
+	{$cell_grid_footcell_field12}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$mcd_valunitant_class}	"
+
+	
+	data-cellId="grid_footcell_field12" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="almovconsdia_egresos_print"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field12}
+									{BEGIN cellblock_grid_footcell_field13}
+	<td
+	
+	{$cell_grid_footcell_field13}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$mcd_valmovto_class}	"
+
+	
+	data-cellId="grid_footcell_field13" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="almovconsdia_egresos_print"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field13}
 							</tr>
 					
 					</tfoot>
