--- a/templates/almovconsdia_egresos_search.htm
+++ b/templates/almovconsdia_egresos_search.htm
@@ -423,6 +423,50 @@
 </div>
 
 {END ctrl_saldo_fieldblock}
+											
+{BEGIN mcd_valunitant_fieldblock}
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_mcd_valunitant}  r-horizontal-field form-horizontal" 	
+	data-signal-error-for="mcd_valunitant{$id}" 
+	data-itemtype="integrated_search_field" data-itemid="integrated_search_field15" {$item_integrated_search_field15} data-pageid="{$pageid}" data-field="mcd_valunitant" data-fieldname="mcd_valunitant" >
+
+
+	<label class="r-search-label control-label" for="{$labelfor_mcd_valunitant}">
+		{$label almovconsdia_egresos mcd_valunitant }	</label>
+	<div class="r-search-option">
+		{$searchtype_mcd_valunitant}
+	</div>
+	<div class="r-search-field">
+		{$mcd_valunitant_editcontrol}	</div>
+	<div class="r-search-field">
+		{$mcd_valunitant_editcontrol1}
+	</div>
+	
+</div>
+
+{END mcd_valunitant_fieldblock}
+											
+{BEGIN mcd_valmovto_fieldblock}
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_mcd_valmovto}  r-horizontal-field form-horizontal" 	
+	data-signal-error-for="mcd_valmovto{$id}" 
+	data-itemtype="integrated_search_field" data-itemid="integrated_search_field16" {$item_integrated_search_field16} data-pageid="{$pageid}" data-field="mcd_valmovto" data-fieldname="mcd_valmovto" >
+
+
+	<label class="r-search-label control-label" for="{$labelfor_mcd_valmovto}">
+		{$label almovconsdia_egresos mcd_valmovto }	</label>
+	<div class="r-search-option">
+		{$searchtype_mcd_valmovto}
+	</div>
+	<div class="r-search-field">
+		{$mcd_valmovto_editcontrol}	</div>
+	<div class="r-search-field">
+		{$mcd_valmovto_editcontrol1}
+	</div>
+	
+</div>
+
+{END mcd_valmovto_fieldblock}
 	
 								</td>
 			{END cellblock_grid_c3}
