--- a/templates/almovconsdia_ingresos_print.htm
+++ b/templates/almovconsdia_ingresos_print.htm
@@ -34,11 +34,19 @@
 			 
 				<div 
 	data-cellId="top_c" data-pageid="{$pageid}"	{$cell_top_c}
-	class=" r-ori-vert			col-md-12
+	class="r-align-left r-ori-vert			col-md-6
 	
 ">
 		 
-		<img src="{$file_url images/logo_960x100.png}" data-itemtype="image" data-itemid="image" {$item_image} data-pageid="{$pageid}" />
+		<img src="{$file_url images/Logo-Colombia-Potencia-de-la-vida.png}" data-itemtype="image" data-itemid="image" {$item_image} data-pageid="{$pageid}" />
+		</div>			 
+				<div 
+	data-cellId="top_c1" data-pageid="{$pageid}"	{$cell_top_c1}
+	class="r-align-right r-ori-vert			col-md-6
+	
+">
+		 
+		<img src="{$file_url images/Logo_Unidad_Logo_Colombia_potencia2-1.png}" data-itemtype="image" data-itemid="image1" {$item_image1} data-pageid="{$pageid}" />
 		</div>					</div>
 			 
 				<div class="row">
@@ -50,7 +58,7 @@
 ">
 		 
 		<span data-itemtype="text" data-itemid="text" {$item_text} data-pageid="{$pageid}" data-small > 
-	<h3><strong style="color: rgb(0, 102, 204);">Ingreso de consumo</strong></h3></span>
+	<h3><strong style="color: rgb(0, 102, 204);">Ingreso</strong></h3></span>
 	 
 		{BEGIN printtabheader}
 <span data-itemtype="print_subheader" data-itemid="print_subheader" {$item_print_subheader} data-pageid="{$pageid}" >
