--- a/styles/pages/alasientos_gestion_list.css
+++ b/styles/pages/alasientos_gestion_list.css
@@ -28,6 +28,9 @@
 [data-cellid="grid_cell_details1"][data-page="alasientos_gestion_list"][data-cellid="grid_cell_details1"][data-page="alasientos_gestion_list"][data-cellid="grid_cell_details1"][data-page="alasientos_gestion_list"] {
   white-space: nowrap;
 }
+[data-page="alasientos_gestion_list"][data-itemid="simple_grid_field4"] {
+  font-weight: bold;
+}
 [data-page="alasientos_gestion_list"][data-itemid="grid_details_link1"] > a {
   font-weight: bold;
   font-size: 16px;
