--- a/styles/pages/almovconsdia_consulta_list.css
+++ b/styles/pages/almovconsdia_consulta_list.css
@@ -16,6 +16,15 @@
 [data-cellid="grid_footcell_field5"][data-page="almovconsdia_consulta_list"][data-cellid="grid_footcell_field5"][data-page="almovconsdia_consulta_list"][data-cellid="grid_footcell_field5"][data-page="almovconsdia_consulta_list"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field6"][data-page="almovconsdia_consulta_list"][data-cellid="grid_footcell_field6"][data-page="almovconsdia_consulta_list"][data-cellid="grid_footcell_field6"][data-page="almovconsdia_consulta_list"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field7"][data-page="almovconsdia_consulta_list"][data-cellid="grid_footcell_field7"][data-page="almovconsdia_consulta_list"][data-cellid="grid_footcell_field7"][data-page="almovconsdia_consulta_list"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field8"][data-page="almovconsdia_consulta_list"][data-cellid="grid_footcell_field8"][data-page="almovconsdia_consulta_list"][data-cellid="grid_footcell_field8"][data-page="almovconsdia_consulta_list"] {
+  white-space: nowrap;
+}
 [data-cellid="grid_headcell_checkbox"][data-page="almovconsdia_consulta_list"][data-cellid="grid_headcell_checkbox"][data-page="almovconsdia_consulta_list"][data-cellid="grid_headcell_checkbox"][data-page="almovconsdia_consulta_list"] {
   width: 30px;
 }
