--- a/styles/pages/almovconsdia_egresos_add.css
+++ b/styles/pages/almovconsdia_egresos_add.css
@@ -1,3 +1,8 @@
+[data-page="almovconsdia_egresos_add"][data-itemid="add_header"] {
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Roboto";
+}
 [data-page="almovconsdia_egresos_add"][data-itemid="integrated_edit_field3"][data-page="almovconsdia_egresos_add"][data-itemid="integrated_edit_field3"][data-page="almovconsdia_egresos_add"][data-itemid="integrated_edit_field3"][data-page="almovconsdia_egresos_add"][data-itemid="integrated_edit_field3"] {
   background-color: #f7f7f7;
 }
