--- a/styles/pages/almovconsdia_egresos_list.css
+++ b/styles/pages/almovconsdia_egresos_list.css
@@ -1,6 +1,3 @@
-[data-cellid="grid_footcell_field"][data-page="almovconsdia_egresos_list"][data-cellid="grid_footcell_field"][data-page="almovconsdia_egresos_list"][data-cellid="grid_footcell_field"][data-page="almovconsdia_egresos_list"] {
-  white-space: nowrap;
-}
 [data-cellid="grid_footcell_field1"][data-page="almovconsdia_egresos_list"][data-cellid="grid_footcell_field1"][data-page="almovconsdia_egresos_list"][data-cellid="grid_footcell_field1"][data-page="almovconsdia_egresos_list"] {
   white-space: nowrap;
 }
@@ -23,6 +20,12 @@
   width: 30px;
 }
 [data-cellid="grid_cell_icons"][data-page="almovconsdia_egresos_list"][data-cellid="grid_cell_icons"][data-page="almovconsdia_egresos_list"][data-cellid="grid_cell_icons"][data-page="almovconsdia_egresos_list"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field6"][data-page="almovconsdia_egresos_list"][data-cellid="grid_footcell_field6"][data-page="almovconsdia_egresos_list"][data-cellid="grid_footcell_field6"][data-page="almovconsdia_egresos_list"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field7"][data-page="almovconsdia_egresos_list"][data-cellid="grid_footcell_field7"][data-page="almovconsdia_egresos_list"][data-cellid="grid_footcell_field7"][data-page="almovconsdia_egresos_list"] {
   white-space: nowrap;
 }
 [data-page="almovconsdia_egresos_list"][data-itemid="page_image_ash8f23hr"] {
