--- a/styles/pages/almovconsdia_egresos_print.css
+++ b/styles/pages/almovconsdia_egresos_print.css
@@ -34,6 +34,12 @@
 [data-cellid="grid_footcell_field11"][data-page="almovconsdia_egresos_print"][data-cellid="grid_footcell_field11"][data-page="almovconsdia_egresos_print"][data-cellid="grid_footcell_field11"][data-page="almovconsdia_egresos_print"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field12"][data-page="almovconsdia_egresos_print"][data-cellid="grid_footcell_field12"][data-page="almovconsdia_egresos_print"][data-cellid="grid_footcell_field12"][data-page="almovconsdia_egresos_print"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_footcell_field13"][data-page="almovconsdia_egresos_print"][data-cellid="grid_footcell_field13"][data-page="almovconsdia_egresos_print"][data-cellid="grid_footcell_field13"][data-page="almovconsdia_egresos_print"] {
+  white-space: nowrap;
+}
 [data-page="almovconsdia_egresos_print"][data-itemid="page_image_ash8f23hr"] {
   width: 400px;
 }
