--- a/styles/pages/gedocumentos_egresos_consumo_list.css
+++ b/styles/pages/gedocumentos_egresos_consumo_list.css
@@ -55,6 +55,11 @@
   font-size: 16px;
   font-family: "Roboto";
 }
+[data-page="gedocumentos_egresos_consumo_list"][data-itemid="grid_details_link2"] > a {
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Roboto";
+}
 [data-page="gedocumentos_egresos_consumo_list"][data-itemid="page_image_ash8f23hr"] {
   width: 400px;
 }
