--- a/styles/pages/gedocumentos_ingresos_consumo_list.css
+++ b/styles/pages/gedocumentos_ingresos_consumo_list.css
@@ -46,6 +46,9 @@
 [data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_list"] {
   white-space: nowrap;
 }
+[data-cellid="top_c"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="top_c"][data-page="gedocumentos_ingresos_consumo_list"][data-cellid="top_c"][data-page="gedocumentos_ingresos_consumo_list"] {
+  font-weight: bold;
+}
 [data-page="gedocumentos_ingresos_consumo_list"][data-itemid="add"] > .btn {
   font-family: "Roboto";
 }
@@ -54,10 +57,15 @@
 }
 [data-page="gedocumentos_ingresos_consumo_list"][data-itemid="grid_details_link"] > a {
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
+  font-family: "Roboto";
+}
+[data-page="gedocumentos_ingresos_consumo_list"][data-itemid="text"] {
+  font-weight: bold;
   font-family: "Roboto";
 }
 [data-page="gedocumentos_ingresos_consumo_list"][data-itemid="grid_details_link1"] > a {
+  font-weight: bold;
   font-size: 16px;
   font-family: "Roboto";
 }
