--- a/styles/pages/gedocumentos_ingresos_consumo_masterprint.css
+++ b/styles/pages/gedocumentos_ingresos_consumo_masterprint.css
@@ -22,26 +22,15 @@
 [data-cellid="grid_footcell_field7"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field7"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field7"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
   white-space: nowrap;
 }
-[data-cellid="grid_footcell_field8"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field8"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field8"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
-  white-space: nowrap;
-}
-[data-cellid="grid_footcell_field9"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field9"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field9"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
-  white-space: nowrap;
-}
-[data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field10"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
-  white-space: nowrap;
-}
-[data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field11"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
-  white-space: nowrap;
-}
-[data-cellid="grid_footcell_field12"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field12"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_footcell_field12"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
-  white-space: nowrap;
-}
 [data-cellid="grid_headcell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_headcell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_headcell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
   width: 30px;
 }
 [data-cellid="grid_cell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_cell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"][data-cellid="grid_cell_icons"][data-page="gedocumentos_ingresos_consumo_masterprint"] {
   white-space: nowrap;
+}
+[data-page="gedocumentos_ingresos_consumo_masterprint"][data-itemid="masterprint_header"] {
+  font-weight: bold;
+  font-family: "Roboto";
 }
 [data-page="gedocumentos_ingresos_consumo_masterprint"][data-itemid="page_image_ash8f23hr"] {
   width: 400px;
