--- a/templates/almovconsdia_egresos_add.htm
+++ b/templates/almovconsdia_egresos_add.htm
@@ -297,7 +297,7 @@
 	
 ">
 		 
-		<h2 data-itemtype="add_header" data-itemid="add_header" {$item_add_header} data-pageid="{$pageid}" >{$pagetitlelabel almovconsdia_egresos add}</h2>
+		<h2 data-itemtype="add_header" data-itemid="add_header" {$item_add_header} data-pageid="{$pageid}" data-page="almovconsdia_egresos_add" >{$pagetitlelabel almovconsdia_egresos add}</h2>
 		</div>					</div>
 			</div>		
 {END top_block}
@@ -809,6 +809,49 @@
 >
 	<div edit-form-cell class="clearfix">
 				
+{BEGIN mcd_valunitant_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_mcd_valunitant}  r-vertical-field" 
+	data-signal-error-for="mcd_valunitant{$id}" {$required_attr_mcd_valunitant}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field4" {$item_integrated_edit_field4} data-pageid="{$pageid}" data-field="mcd_valunitant" data-fieldname="mcd_valunitant" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_mcd_valunitant}">
+		{BEGIN mcd_valunitant_label}{$label almovconsdia_egresos mcd_valunitant }{END mcd_valunitant_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$mcd_valunitant_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="mcd_valunitant" {$tooltipAttr almovconsdia_egresos mcd_valunitant } >
+		<div class="text-muted" >
+		{$tooltip almovconsdia_egresos mcd_valunitant }		</div>
+	</div>
+</div>
+
+
+{END mcd_valunitant_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c23}
+								</tr>
+	 
+	 
+														<tr {$row_grid_5} >
+										
+
+{BEGIN cellblock_grid_c}
+<td
+	{$cell_grid_c}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
 {BEGIN sys_user_fieldblock}
 
 
@@ -832,7 +875,43 @@
 {END sys_user_fieldblock}
 	
 								</td>
-			{END cellblock_grid_c23}
+			{END cellblock_grid_c}
+			 
+		
+							
+
+{BEGIN cellblock_grid_c24}
+<td
+	{$cell_grid_c24}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c24" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+									</td>
+			{END cellblock_grid_c24}
+			 
+		
+							
+
+{BEGIN cellblock_grid_c25}
+<td
+	{$cell_grid_c25}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c25" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+									</td>
+			{END cellblock_grid_c25}
 								</tr>
 			</tbody></table>
 {END grid_block}
