--- a/templates/almovconsdia_egresos_view.htm
+++ b/templates/almovconsdia_egresos_view.htm
@@ -782,6 +782,48 @@
 >
 	<div edit-form-cell class="clearfix">
 				
+{BEGIN mcd_valunitant_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_mcd_valunitant}  r-vertical-field" data-fieldname="mcd_valunitant" data-signal-error-for="mcd_valunitant{$id}" data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field4" {$item_integrated_edit_field4} data-pageid="{$pageid}" data-field="mcd_valunitant" data-fieldname="mcd_valunitant" data-compact >
+
+		<div class="col-md-12">
+	
+	<label class="" for="{$labelfor_mcd_valunitant}">
+		
+		{BEGIN mcd_valunitant_label}{$label almovconsdia_egresos mcd_valunitant }{END mcd_valunitant_label}
+	</label>
+	<div class="" >
+		{$mcd_valunitant_value}	</div>
+
+		</div>
+		
+</div>
+
+
+{END mcd_valunitant_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c23}
+								</tr>
+	 
+	 
+														<tr {$row_grid_5} >
+										
+
+{BEGIN cellblock_grid_c}
+<td
+	{$cell_grid_c}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
 {BEGIN sys_user_fieldblock}
 
 
@@ -804,7 +846,43 @@
 {END sys_user_fieldblock}
 	
 								</td>
-			{END cellblock_grid_c23}
+			{END cellblock_grid_c}
+			 
+		
+							
+
+{BEGIN cellblock_grid_c24}
+<td
+	{$cell_grid_c24}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c24" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+									</td>
+			{END cellblock_grid_c24}
+			 
+		
+							
+
+{BEGIN cellblock_grid_c25}
+<td
+	{$cell_grid_c25}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c25" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+									</td>
+			{END cellblock_grid_c25}
 								</tr>
 			</tbody></table>
 {END grid_block}
