--- a/templates/gedocumentos_egresos_consumo_add.htm
+++ b/templates/gedocumentos_egresos_consumo_add.htm
@@ -723,6 +723,67 @@
 														<tr {$row_grid_3} >
 										
 
+{BEGIN cellblock_grid_c}
+<td
+	{$cell_grid_c}
+	class=" r-ori-vert"
+	
+			data-single
+			
+	ocolspan="2"		data-cellId="grid_c" data-pageid="{$pageid}"
+		data-v-cell="4"
+		
+>
+	<div edit-form-cell class="clearfix">
+				
+{BEGIN do_concepto_fieldblock}
+
+
+<div class="r-integrated-field form-group clearfix {$fielddispclass_do_concepto}  r-vertical-field" 
+	data-signal-error-for="do_concepto{$id}" {$required_attr_do_concepto}
+	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field4" {$item_integrated_edit_field4} data-pageid="{$pageid}" data-field="do_concepto" data-fieldname="do_concepto" >
+
+	<label class="r-edit-label control-label" for="{$labelfor_do_concepto}">
+		{BEGIN do_concepto_label}{$label gedocumentos_egresos_consumo do_concepto }{END do_concepto_label}
+		<span class="icon-required"></span>
+	</label>
+	<div class="r-edit-field">
+		{$do_concepto_editcontrol}	</div>
+	<div class="r-edit-tooltip" data-helpfor="do_concepto" {$tooltipAttr gedocumentos_egresos_consumo do_concepto } >
+		<div class="text-muted" >
+		{$tooltip gedocumentos_egresos_consumo do_concepto }		</div>
+	</div>
+</div>
+
+
+{END do_concepto_fieldblock}
+	
+								</td>
+			{END cellblock_grid_c}
+			 
+		
+							
+
+{BEGIN cellblock_grid_c21}
+<td
+	{$cell_grid_c21}
+	class=" r-ori-vert"
+	
+			data-single
+			
+			data-cellId="grid_c21" data-pageid="{$pageid}"
+		data-v-cell="2"
+		
+>
+	<div edit-form-cell class="clearfix">
+									</td>
+			{END cellblock_grid_c21}
+								</tr>
+	 
+	 
+														<tr {$row_grid_4} >
+										
+
 {BEGIN cellblock_grid_c9}
 <td
 	{$cell_grid_c9}
@@ -763,7 +824,7 @@
 								</tr>
 	 
 	 
-														<tr {$row_grid_4} >
+														<tr {$row_grid_5} >
 										
 
 {BEGIN cellblock_grid_c10}
@@ -883,85 +944,6 @@
 	
 								</td>
 			{END cellblock_grid_c12}
-								</tr>
-	 
-	 
-														<tr {$row_grid_5} >
-										
-
-{BEGIN cellblock_grid_c14}
-<td
-	{$cell_grid_c14}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c14" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-				
-{BEGIN do_concepto_fieldblock}
-
-
-<div class="r-integrated-field form-group clearfix {$fielddispclass_do_concepto}  r-vertical-field" 
-	data-signal-error-for="do_concepto{$id}" {$required_attr_do_concepto}
-	data-itemtype="integrated_edit_field" data-itemid="integrated_edit_field4" {$item_integrated_edit_field4} data-pageid="{$pageid}" data-field="do_concepto" data-fieldname="do_concepto" >
-
-	<label class="r-edit-label control-label" for="{$labelfor_do_concepto}">
-		{BEGIN do_concepto_label}{$label gedocumentos_egresos_consumo do_concepto }{END do_concepto_label}
-		<span class="icon-required"></span>
-	</label>
-	<div class="r-edit-field">
-		{$do_concepto_editcontrol}	</div>
-	<div class="r-edit-tooltip" data-helpfor="do_concepto" {$tooltipAttr gedocumentos_egresos_consumo do_concepto } >
-		<div class="text-muted" >
-		{$tooltip gedocumentos_egresos_consumo do_concepto }		</div>
-	</div>
-</div>
-
-
-{END do_concepto_fieldblock}
-	
-								</td>
-			{END cellblock_grid_c14}
-			 
-		
-							
-
-{BEGIN cellblock_grid_c15}
-<td
-	{$cell_grid_c15}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c15" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c15}
-			 
-		
-							
-
-{BEGIN cellblock_grid_c16}
-<td
-	{$cell_grid_c16}
-	class=" r-ori-vert"
-	
-			data-single
-			
-			data-cellId="grid_c16" data-pageid="{$pageid}"
-		data-v-cell="2"
-		
->
-	<div edit-form-cell class="clearfix">
-									</td>
-			{END cellblock_grid_c16}
 								</tr>
 	 
 	 
